Closed
Bug 1219502
Opened 10 years ago
Closed 10 years ago
Build failure: trayToolkit.cpp: error: 'GetDocument' : is not a member of 'nsIDOMWindow'
Categories
(Instantbird Graveyard :: Other, defect)
Instantbird Graveyard
Other
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: florian, Assigned: florian)
Details
Attachments
(1 file)
|
2.50 KB,
patch
|
aleth
:
review+
|
Details | Diff | Splinter Review |
Builds are failing today on Windows and Linux, most likely due to the changes from bug 1216401.
Attachment #8680337 -
Flags: review?(aleth)
Comment 1•10 years ago
|
||
Comment on attachment 8680337 [details] [diff] [review]
Patch
Review of attachment 8680337 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks! (Let's hope the document always already exists for windows...)
Attachment #8680337 -
Flags: review?(aleth) → review+
| Assignee | ||
Comment 2•10 years ago
|
||
https://hg.mozilla.org/comm-central/rev/fcd1a6bd0e04e59a82ed2fec609282dc9178cf3a
Bug 1219502 - Build failure: trayToolkit.cpp: error: 'GetDocument' : is not a member of 'nsIDOMWindow', r=aleth.
| Assignee | ||
Updated•10 years ago
|
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•