Bug 1219502 - Build failure: trayToolkit.cpp: error: 'GetDocument' : is not a member of 'nsIDOMWindow', r=aleth.